--- a/dieudacbiet.html
+++ b/dieudacbiet.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>Có thể bạn chưa biết về Minh Tuấn Tống</title>
     <style>
@@ -24,7 +25,9 @@
         <table width="100%" border="0">
             <tr>
                 <td colspan="3" align="left">
-                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto;"></a>
+                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto; float: left;"></a>
+                    <h1 style="padding-top: 1%; font-family: Pacifico, serif; font-size: 30px;">Blog của Tống Minh Tuấn
+                    </h1>
                     <br>
 
                     <table width="100%" class="taskbar" style="border-collapse: collapse; border: 2px solid #000;">
@@ -76,17 +79,24 @@
                 <table width="100%" border="1" cellspacing="0" cellpadding="10">
                     <tr>
                         <td>
-                            <h1 style="text-align: center; font-weight: bold; font-size: 50px;"> Có thể bạn chưa biết về Minh Tuấn Tống </h1>
-                            <ul>
+                            <h1 style="text-align: center; font-weight: bold; font-size: 50px;"> Có thể bạn chưa biết về
+                                Minh Tuấn Tống </h1>
+                            <ul style="list-style-type: none;">
                                 <li style="text-align:center; font-size:30px; font-weight:bold; margin-bottom:1.5em;">
-                                    <a href="dieudacbiet1.html">Sự thật thứ nhất</a> </li>
+                                    <a href="dieudacbiet1.html">Sự thật thứ nhất</a>
+                                </li>
                                 <hr style="border: 2px dashed rgb(53, 50, 54); width: 60%; margin: 1.5em auto;">
                                 <li style="text-align:center; font-size:30px; font-weight:bold; margin-bottom:1.5em;">
-                                    <a href="dieudacbiet2.html">Sự thật thứ hai</a> </li>
+                                    <a href="dieudacbiet2.html">Sự thật thứ hai</a>
+                                </li>
                                 <hr style="border: 2px dashed rgb(53, 50, 54); width: 60%; margin: 1.5em auto;">
                                 <li style="text-align:center; font-size:30px; font-weight:bold; margin-bottom:1.5em;">
-                                    <a href="dieudacbiet3.html">Sự thật thứ ba</a> </li>
+                                    <a href="dieudacbiet3.html">Sự thật thứ ba</a>
+                                </li>
                             </ul>
+                            <div style="text-align: center;">
+                                <img src="logo1.png" alt="Logo">
+                            </div>
                         </td>
                     </tr>
                 </table>
