--- a/sothich1.html
+++ b/sothich1.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>Đồ ăn thức uống</title>
     <style>
@@ -24,7 +25,9 @@
         <table width="100%" border="0">
             <tr>
                 <td colspan="3" align="left">
-                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto;"></a>
+                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto; float: left;"></a>
+                    <h1 style="padding-top: 1%; font-family: Pacifico, serif; font-size: 30px;">Blog của Tống Minh Tuấn
+                    </h1>
                     <br>
 
                     <table width="100%" class="taskbar" style="border-collapse: collapse; border: 2px solid #000;">
@@ -81,7 +84,7 @@
                             </h1>
                             <div style="font-size:22px; line-height:1.6; text-align:left; padding:20px; display:flex;">
                                 <div style="flex:2; padding-right:20px;">
-                                    <p><i>                                
+                                    <p><i>
                                             Là một người “béo” nhưng gu ăn uống của Tuấn lại vô cùng đặc biệt và… có
                                             phần sang chảnh. Cậu đặc biệt mê gà rán, taco, nem, khoai chiên, cơm rang và
                                             không thể thiếu ly coca mát lạnh. Dù thích ăn nhiều món “nặng đô”, Tuấn luôn
@@ -89,6 +92,9 @@
                                             cách cậu thưởng thức đồ ăn với tâm trạng tích cực và hài hước khiến ai nhìn
                                             cũng thấy vui vẻ.
                                         </i></p>
+                                    <div style="text-align: center;">
+                                        <img src="logo7.png" width="500" height="400" alt="Logo">
+                                    </div>
                                 </div>
                         </td>
                     </tr>
