--- a/dieudacbiet1.html
+++ b/dieudacbiet1.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>Sự thật thứ nhất</title>
     <style>
@@ -24,7 +25,9 @@
         <table width="100%" border="0">
             <tr>
                 <td colspan="3" align="left">
-                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto;"></a>
+                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto; float: left;"></a>
+                    <h1 style="padding-top: 1%; font-family: Pacifico, serif; font-size: 30px;">Blog của Tống Minh Tuấn
+                    </h1>
                     <br>
 
                     <table width="100%" class="taskbar" style="border-collapse: collapse; border: 2px solid #000;">
@@ -91,8 +94,8 @@
                                         </i></p>
                                 </div>
                                 <div style="text-align: center;">
-                                <img src="logo5.jpg" width="300" height="300" >
-                            </div>
+                                    <img src="logo5.jpg" width="300" height="300">
+                                </div>
                         </td>
                     </tr>
                 </table>
