--- a/gioithieu3.html
+++ b/gioithieu3.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>Thành tích học tập</title>
     <style>
@@ -24,7 +25,9 @@
         <table width="100%" border="0">
             <tr>
                 <td colspan="3" align="left">
-                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto;"></a>
+                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto; float: left;"></a>
+                    <h1 style="padding-top: 1%; font-family: Pacifico, serif; font-size: 30px;">Blog của Tống Minh Tuấn
+                    </h1>
                     <br>
 
                     <table width="100%" class="taskbar" style="border-collapse: collapse; border: 2px solid #000;">
@@ -83,13 +86,16 @@
                                 <div style="flex:2; padding-right:20px;">
                                     <p><i>
                                             Dù ngoại hình có hơi “mũm mĩm”, Tuấn lại nổi tiếng là học sinh học cực giỏi
-                                            và luôn nằm trong top của trường. Cậu đạt 1520 SAT, 44.25 điểm thi vào lớp
+                                            và luôn nằm trong top của trường. Cậu đạt 7.5 IELTS, 1520 SAT, 45.75 điểm
+                                            thi vào lớp
                                             10 và đỗ cùng lúc các trường danh tiếng như Hà Nội – Amsterdam, THPT Chuyên
                                             KHTN và Chuyên Sư Phạm. Suốt nhiều năm, GPA của Tuấn luôn giữ trên 9.0, thể
                                             hiện sự nghiêm túc và khả năng tiếp thu rất tốt. Với nền tảng vững chắc và
                                             tinh thần cầu tiến, Tuấn đặt mục tiêu theo học một trường đại học danh giá
                                             trong tương lai.
                                         </i></p>
+                                        <div style="text-align: center;">
+                                        <img src="logo10.jpg" alt="Logo">
                                 </div>
                             </div>
                         </td>
