--- a/sothich.html
+++ b/sothich.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>Sở thích</title>
     <style>
@@ -24,7 +25,9 @@
         <table width="100%" border="0">
             <tr>
                 <td colspan="3" align="left">
-                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto;"></a>
+                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto; float: left;"></a>
+                    <h1 style="padding-top: 1%; font-family: Pacifico, serif; font-size: 30px;">Blog của Tống Minh Tuấn
+                    </h1>
                     <br>
 
                     <table width="100%" class="taskbar" style="border-collapse: collapse; border: 2px solid #000;">
@@ -77,16 +80,22 @@
                     <tr>
                         <td>
                             <h1 style="text-align: center; font-weight: bold; font-size: 50px;"> Sở thích </h1>
-                            <ul>
+                            <ul style="list-style-type: none;">
                                 <li style="text-align:center; font-size:30px; font-weight:bold; margin-bottom:1.5em;">
-                                    <a href="sothich1.html">Đồ ăn thức uống</a> </li>
+                                    <a href="sothich1.html">Đồ ăn thức uống</a>
+                                </li>
                                 <hr style="border: 2px dashed rgb(53, 50, 54); width: 60%; margin: 1.5em auto;">
                                 <li style="text-align:center; font-size:30px; font-weight:bold; margin-bottom:1.5em;">
-                                    <a href="sothich2.html">Phim ảnh</a> </li>
+                                    <a href="sothich2.html">Phim ảnh</a>
+                                </li>
                                 <hr style="border: 2px dashed rgb(53, 50, 54); width: 60%; margin: 1.5em auto;">
                                 <li style="text-align:center; font-size:30px; font-weight:bold; margin-bottom:1.5em;">
-                                    <a href="sothich3.html">Thể thao</a> </li>
+                                    <a href="sothich3.html">Thể thao</a>
+                                </li>
                             </ul>
+                            <div style="text-align: center;">
+                                <img src="logo1.png" alt="Logo">
+                            </div>
                         </td>
                     </tr>
                 </table>
