--- a/sothich2.html
+++ b/sothich2.html
@@ -2,6 +2,7 @@
 <html lang="vi">
 
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
     <meta charset="utf-8">
     <title>Phim ảnh</title>
     <style>
@@ -24,7 +25,9 @@
         <table width="100%" border="0">
             <tr>
                 <td colspan="3" align="left">
-                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto;"></a>
+                    <a href="index.html"><img src="logo.png" style="width: 120px; height: auto; float: left;"></a>
+                    <h1 style="padding-top: 1%; font-family: Pacifico, serif; font-size: 30px;">Blog của Tống Minh Tuấn
+                    </h1>
                     <br>
 
                     <table width="100%" class="taskbar" style="border-collapse: collapse; border: 2px solid #000;">
@@ -90,8 +93,10 @@
                                             cả đều mang lại cho cậu cảm giác vui vẻ và thoải mái. Sở thích này góp phần
                                             tạo nên một Tuấn trẻ trung, nhiệt huyết và đầy màu sắc.
                                         </i></p>
+                                    <div style="text-align: center;">
+                                        <img src="logo9.jpg" width="600" height="400" alt="Logo">
+                                    </div>
                                 </div>
-                            </div>
                         </td>
                     </tr>
                 </table>
