--- a/gioithieu2.html
+++ b/gioithieu2.html
@@ -91,6 +91,9 @@
                                             và dễ gần. Chính sự vô tư, tốt bụng và luôn biết tạo không khí vui vẻ khiến
                                             cậu ấy được bạn bè yêu quý một cách tự nhiên.
                                         </i></p>
+                                        <div style="text-align: center;">
+                                        <img src="logo11.jpg" width="600" height="400" alt="Logo">
+                                </div>
                                 </div>
                             </div>
                         </td>
